--- a/blocks/header.css
+++ b/blocks/header.css
@@ -18,6 +18,7 @@
     font-size: 60px;
     line-height: 72px;
     letter-spacing: -0.6px;
+    z-index: 1;
 }
 
 .header__span-accent {
@@ -36,6 +37,7 @@
     font-family: "Noto Serif", "Times New Roman", serif;
     font-size: 20px;
     line-height: 30px;
+    z-index: 1;
 }
 
 .header__image {
@@ -44,6 +46,7 @@
     width: 646px;
     right: 5px;
     top: 124px;
+    z-index: 0;
 }
 
 .header__footer {
@@ -51,6 +54,7 @@
     justify-content: space-between;
     margin-top: auto;
     align-items: end;
+    z-index: 1;
 }
 
 .header__paragraph {
