--- a/blocks/reservation.css
+++ b/blocks/reservation.css
@@ -7,6 +7,7 @@
 
 .reservation__title {
     margin-bottom: 80px;
+    margin-top: 0;
     text-align: center;
     font-weight: 500;
     font-size: 44px;
@@ -15,5 +16,5 @@
 
 .reservation__form {
     margin: 0 auto;
-    max-width: 365px;
+    max-width: 385px;
 }
